# aperture

./: .gitignore  README.md  TODO.md  docker-compose.yaml
config/: kubeconfig
k8s/services/conway/: conway-deploy.yaml  conway-service.yaml
k8s/services/dict-regex/: dict-regex-deploy.yaml  dict-regex-service.yaml
k8s/services/localstack/: localstack-deploy.yaml  localstack-service.yaml
services/conway/: Dockerfile  README.md  docker_run.sh
services/conway/client/: package-lock.json  package.json  tsconfig.json  webpack.common.js
services/conway/client/public/: index.html
services/conway/client/src/: index.ts
services/conway/wasm/: Cargo.toml
services/conway/wasm/src/: lib.rs
services/dict_regex/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/dict_regex/src/match_engine/: .dockerignore  Cargo.toml  pyproject.toml
services/dict_regex/src/match_engine/src/: lib.rs
services/dict_regex/src/server/: app.py  dependencies.py  match_engine.py
services/dict_regex/src/server/routers/: __init__.py  match.py
services/lightbulb_escape/: README.md  pyproject.toml
services/lightbulb_escape/src/lightbulb_escape/: models.py
services/puzzles/100_prisoners/: README.md  pyproject.toml  setup.cfg
services/puzzles/100_prisoners/src/100_prisoners/: solutions.py
services/puzzles/lightbulb_escape/: tox.ini
tf-local/: .gitignore  main.tf  terraform.tfstate  variables.tf
